# insight-faucet

./: Anchor.toml  package.json
idl/: insight_faucet.json  insight_faucet.ts
programs/insight_faucet/: Cargo.toml
programs/insight_faucet/src/: lib.rs
tests/: insight_faucet.test.js  insight_faucet.test.ts
